Make Utils::valueDeclForOperatorCall() more robust.

There were situations where we were picking the wrong DeclRefExpr.
Unit-test already added in reserve-candidates/main.cpp

BUG: 362943